# IndoorHumiditySystem-DEVS

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  makefile
docs/: DEVSmodelsForm.doc  Indoor Humidity Regulation System Using DEVS.docx  IndoorHumiditySystem_Report.docx
include/atomics/: Humidifier.hpp  Humistat.hpp  IndoorAir.hpp  LeakageEstimator.hpp
include/coupled/: HumidityPlant.hpp  IndoorHumiditySystem.hpp
include/testing/: ExperimentModels.hpp
input_data/: humidifier_commands.txt  humidity_plant_rh_profile.txt  humistat_ramp.txt  indoor_air_injection.txt  indoor_air_leakage.txt  leakage_reference.txt  outdoor_stepchange.txt
logs/: atomic_humidifier.csv  atomic_humistat.csv  atomic_indoor_air.csv  atomic_leakage.csv  coupled_humidity_plant.csv  outdoor_dry.csv  outdoor_humid.csv  outdoor_stepchange_system_rh.csv
scripts/: README.md  extract_system_rh.sh  run_atomic_humidifier.sh  run_atomic_humistat.sh  run_atomic_indoor_air.sh  run_atomic_leakage.sh  run_coupled_humidity_plant.sh  run_dry.sh  run_humid.sh  run_stepchange.sh
src/: main.cpp  test_humidifier.cpp  test_humidity_plant.cpp  test_humistat.cpp  test_indoor_air.cpp  test_leakage.cpp
